--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,5 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/macos,python,windows,eclipse,terraform,intellij+all
 
+# Requirements
+*target
